# ai-course

./: pyproject.toml
lsu_pilot/: functions.py  main.py  questions.py
lsu_pilot/embedding/: embed.py
