[tool.poetry]
name = "lsu-pilot"
version = "0.1.0"
description = ""
authors = ["Nithish Raghunandanan <12782505+nithishr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.52.1"
python-dotenv = "^1.0.1"
python-telegram-bot = "^21.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
